--- a/1.html
+++ b/1.html
@@ -2,11 +2,14 @@
 
 <body>
 <script> 
-let userName = prompt("Your name?", "Shriya");
-let isTeaWanted = confirm("Do you want some tea?");
+let user = {
+  name: "John",
+  age: 30
+};
 
-alert( "Visitor: " + userName ); 
-alert( "Tea wanted: " + isTeaWanted ); 
+let key = prompt("What do you want to know about the user?", "name");
+
+alert( user[key] ); 
 </script>
 </body>
 </html>
