--- a/1.html
+++ b/1.html
@@ -2,14 +2,12 @@
 
 <body>
 <script> 
-let user = {
-  name: "John",
-  age: 30
-};
+let user = { 
+     name:"john"
+     
+ };
 
-let key = prompt("What do you want to know about the user?", "name");
-
-alert( user[key] ); 
+alert( user.name===undefined ); 
 </script>
 </body>
 </html>
