--- a/1.html
+++ b/1.html
@@ -2,17 +2,23 @@
 
 <body>
 <script> 
-let codes = {
-  "49": "Germany",
-  "41": "Switzerland",
-  "44": "Great Britain",
-  
-  "1": "USA"
+let user = {
+  name: "John",
+  age: 30
 };
 
-for(let key in codes) {
-  alert(key); 
+let  clone= {}; 
+
+
+for (let key in user) {
+  clone[key] = user[key];
 }
+
+
+clone.name = "Pete"; 
+
+alert( user.name ); 
+alert(clone.name);
 </script>
 </body>
 </html>
